tests/copies/newAndNeedChangeTests/pass/Finally.java
package pass;

public class Finally {
  public boolean testFinally() {
    return true;
  }
}
