tests/copies/newAndNeedChangeTests/fail/Implements.java
package fail;

import java.lang.System;

public class Implements {

  public static void main(String[] args ) {
    boolean implements = true;
  }

}
